--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.marlowelandicho.myappportfolio.sunshine">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -46,6 +45,10 @@
 
 
         </activity>
+
+        <provider
+            android:name=".data.WeatherProvider"
+            android:authorities="com.marlowelandicho.myappportfolio.sunshine" />
     </application>
 
 </manifest>
